Прочитал The Mamba Mentality

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/the_mamba_mentality.jpg" title="Коби Брайант. The Mamba Mentality"></th>
 <th><img src="jpg/dodo_kniga_2.jpg" title="Додо книга 2"></th>
 <th><img src="jpg/pyaro_32.jpg" title="[Эркюль Пуаро #32] Хикори Дикори"></th>
 <th><img src="jpg/pyaro_30.jpg" title="[Эркюль Пуаро #30] Миссис Макгинти с жизнью рассталась"></th>	
@@ -771,11 +772,14 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>									 Брайант Коби</h4></th>	
 <th colspan="2"><h4><a href="http://flibusta.is/a/99070">Бракен Александра</a></h4></th>
 <th colspan="3"><h4><a href="http://flibusta.is/a/1594"> Браславский Дмитрий</a></h4></th>
-<th colspan="2"><h4>									 Брин Ярослав</h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/1629"> Брэдбери Рэй</a></h4></th>
+<th colspan="3"><h4>									 Брин Ярослав &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="http://flibusta.is/a/1629"> Брэдбери Рэй</a></h4></th>
 </tr><tr>
+<th><img src="jpg/the_mamba_mentality.jpg" title="Коби Брайант. The Mamba Mentality"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/temni-otrazh.jpg" title="Темные отражения"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a50" src="jpg/pyt_geroia_1.jpg" title="Подземелья Черного замка (книга-игра)"></a></th>
@@ -784,7 +788,6 @@
 <th><img src="jpg/zhir.jpg" title="Меняю жир на силу воли"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/451.jpg" title="451 градус по Фаренгейту"></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
