--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+		<th><img src="data/07.2025.jpg"></th>
 <th><img src="jpg/the_mamba_mentality.jpg" title="Коби Брайант. The Mamba Mentality"></th>
 <th><img src="jpg/dodo_kniga_2.jpg" title="Додо книга 2"></th>
 <th><img src="jpg/pyaro_32.jpg" title="[Эркюль Пуаро #32] Хикори Дикори"></th>
