Прочитал Маленький принц

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/malenki_princ.jpg" title="Маленький принц"></th>
 <th><a id="a213" src="jpg/arhiv_buresveta_4.jpg" title="Ритм войны (аудиокнига)"></a></th>
 		<th><img src="data/07.2025.jpg"></th>
 <th><img src="jpg/the_mamba_mentality.jpg" title="Коби Брайант. The Mamba Mentality"></th>
@@ -1988,30 +1989,33 @@
 <table><tr align="left"> 
 <th colspan="3"><h4><a href="https://flibusta.is/a/20642"> Сваллоу Джеймс</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/12204"> Свифт Джонатан</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/29118"> Сент-Экзюпери Антуан</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/163238">Синек Саймон</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/192776">Синсеро Джен</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/deus_ex_1.jpg" title="Deus Ex. Эффект Икара"></th> 
 <th><img src="jpg/deus_ex_2.jpg" title="Deus Ex. Черный свет"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/pytishestvie_gylivera.jpg" title="Путешествия Лемюэля Гулливера"></th>
 <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/malenki_princ.jpg" title="Маленький принц"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/nachni_s_pochemy.jpg" title="Начни с ПОЧЕМУ"></th>
 <th><img src="jpg/lideri_ediat.jpg" title="Лидеры едят последними"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/ni_si.jpg" title="НИ СЫ. Восточная мудрость"></th> 
-<th><img src="jpg/ne_typi.jpg" title="НЕ ТУПИ"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="3"><h4><a href="https://flibusta.is/a/192776">Синсеро Джен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/221391">Скотт Стив</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/253187">Смит Уилл</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/20381"> Солженицын А.И.</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/245371">Соренсен Майкл</a></h4></th>
-<th colspan="2"><h4>									   Спунер Ребекка</h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/20381"> Солженицын А.И. </a>
+					<a href="https://flibusta.is/a/245371">Соренсен Майкл</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/ni_si.jpg" title="НИ СЫ. Восточная мудрость"></th> 
+<th><img src="jpg/ne_typi.jpg" title="НЕ ТУПИ"></th> 
+<th><img src="jpg/0.jpg"></th>
 <th><a id="a74" src="jpg/127_privichek.jpg" title="Лучше каждый день. 127 полезных привычек для здоровья, счастья и успеха (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/will.jpg" title="Will. Чему может научить нас простой парень, ставший самым высокооплачиваемым актером Голливуда"></th>
@@ -2019,19 +2023,18 @@
 <th><a id="a101" src="jpg/1_den.jpg" title="Один день Ивана Денисовича (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a117" src="jpg/yslishat.jpg" title="Услышать и понять (аудиокнига)"></a></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/ezhednevnik.jpg" title="Искусство ведения ежедневника. Учимся планировать творчески!"></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4>									   Спунер Ребекка</h4></th>
 <th colspan="5"><h4><a href="https://flibusta.is/a/11965"> Стаут Рекс Тодхантер</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/160770">Стивенсон Дэвид</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/213190">Стивенсон Шон</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="https://flibusta.is/a/14569"> Стинсон Барни</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/160770">Стивенсон Дэвид</a>&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/213190">Стивенсон Шон</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/ezhednevnik.jpg" title="Искусство ведения ежедневника. Учимся планировать творчески!"></th>
+<th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/niro_wolf_1.jpg" title="Острие копья"></th>
 <th><img src="jpg/niro_wolf_11.jpg" title="С прискорбием извещаем"></th>
 <th><img src="jpg/niro_wolf_25.jpg" title="Пистолет с крыльями"></th>
@@ -2040,18 +2043,19 @@
 <th><a id="a37" src="jpg/lifehaks.jpg" title="Лайфхаки богатых людей (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/zdorovi_son.jpg" title="Здоровый сон. 21 шаг на пути к хорошему самочувствию"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/kodeks_bratana.jpg" title="СтинсонБарни  и  Мэтт - Кодекс Братана"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/14569">Стинсон Барни</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/19189"> Стругацкие А.</a> 
 					<a href="http://flibusta.is/a/20554"> и Б.</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/20510">Сунь-Цзы</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/12281">Тарас Анатолий</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/kodeks_bratana.jpg" title="СтинсонБарни  и  Мэтт - Кодекс Братана"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/piknik_na_obochine.jpg" title="Пикник на обочине"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/art_of_war.jpg" title="Искусство войны"></th>
@@ -2198,9 +2202,9 @@
 
 
 <table><tr align="left">
-<th colspan="2"><h4><a href="https://flibusta.is/a/6117">  Чалдини Роберт</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/1884">  Чан Джеки</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/1944">  Чепмен Гэри</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/6117">Чалдини Роберт</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/1884">Чан Джеки</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/1944">Чепмен Гэри</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/psihologia_vliania.jpg" title="Психология влияния (4-е издание)"></th>
 <th><img src="jpg/0.jpg"></th>
@@ -2234,7 +2238,7 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="https://flibusta.is/a/169016">Шагабутдинов Ренат</a></h4></th>
-<th colspan="6"><h4><a href="https://flibusta.is/a/25175">Шарма Робин</a></h4></th>
+<th colspan="6"><h4><a href="https://flibusta.is/a/25175"> Шарма Робин</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/zariazhen_na_100.jpg" title="Заряжен на 100%"></th>
 <th><img src="jpg/0.jpg"></th>
@@ -2249,7 +2253,7 @@
 
 
 <table><tr align="left"> 
-<th colspan="5"><h4><a href="https://flibusta.is/a/20365">Шварценеггер Арнольд</a></h4></th>
+<th colspan="5"><h4><a href="https://flibusta.is/a/20365"> Шварценеггер Арнольд</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/178835">Шевелева Ольга</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/20317"> Шекспир Уильям</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="https://flibusta.is/a/34088"> Шелли Мэри</a></h4></th>
