Прочитал Ониксовый шторм

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/4_krilo_3.jpg" title="Ониксовый шторм"></th>
 <th><img src="jpg/mozg_tetrad_3.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №3"></th>
 <th><img src="jpg/malenki_princ.jpg" title="Маленький принц"></th>
 <th><a id="a213" src="jpg/arhiv_buresveta_4.jpg" title="Ритм войны (аудиокнига)"></a></th>
@@ -2355,6 +2356,7 @@
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a122" src="jpg/4_krilo.jpg" title="Четвертое крыло (аудиокнига)"></a></th>
 <th><img src="jpg/4_krilo_2.jpg" title="Железное пламя"></th>
+<th><img src="jpg/4_krilo_3.jpg" title="Ониксовый шторм"></th>
 </tr></table>
 
 
