Прочитал Причуда мертвеца

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_33.jpg" title="[Эркюль Пуаро #33] Причуда мертвеца"></th>
 <th><img src="jpg/4_krilo_3.jpg" title="Ониксовый шторм"></th>
 <th><img src="jpg/mozg_tetrad_3.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №3"></th>
 <th><img src="jpg/malenki_princ.jpg" title="Маленький принц"></th>
@@ -1490,7 +1491,7 @@
 <th><img src="jpg/pyaro_30.jpg" title="[Эркюль Пуаро #30] Миссис Макгинти с жизнью рассталась"></th>	
 <th><img src="jpg/pyaro_31.jpg" title="[Эркюль Пуаро #31] После похорон"></th>
 <th><img src="jpg/pyaro_32.jpg" title="[Эркюль Пуаро #32] Хикори Дикори"></th>
-<th><img src="jpg/0.jpg"></th>  </tr>
+<th><img src="jpg/pyaro_33.jpg" title="[Эркюль Пуаро #33] Причуда мертвеца"></th> </tr>
 <tr> <th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
