Прочитал Про Федота-стрельца, удалого молодца

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pro_fedota.jpg" title="Про Федота-стрельца, удалого молодца"></th>		
 <th><img src="jpg/pyaro_33.jpg" title="[Эркюль Пуаро #33] Причуда мертвеца"></th>
 <th><img src="jpg/4_krilo_3.jpg" title="Ониксовый шторм"></th>
 <th><img src="jpg/mozg_tetrad_3.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №3"></th>
@@ -2138,12 +2139,14 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="https://flibusta.is/a/12753"> Уэллс Герберт</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/3342">  Филатов Леонид</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/182280">Фицджеральд Мэт</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/20669"> Фицджеральд Фрэнсис</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/37978"> Флинн Винс</a></h4></th>
-<th colspan="1"><h4><a href="https://flibusta.is/a/3465">  Форд Генри</a></h4></th>
 </tr><tr>  
 <th><a id="a103" src="jpg/mashina_vremeni.jpg" title="Машина времени (аудиокнига)"></a></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/pro_fedota.jpg" title="Про Федота-стрельца, удалого молодца"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/beg_80-20.jpg" title="Бег по правилу 80/20"></th>
 <th><img src="jpg/dieta.jpg" title="Диета чемпионов"></th>
@@ -2151,19 +2154,19 @@
 <th><img src="jpg/velikiy_getsbi.jpg" title="Великий Гэтсби"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/naemnik.jpg" title="Наемник"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/ford_1.jpg" title="Моя жизнь, мои достижения"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/3465">  Форд Генри</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/66303"> Фрайд Джейсон</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/64177"> Франклин Бенджамин</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/3519">  Фрейд Зигмунд</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/170282">Фронинг Рич</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/4568">  Хаксли Олдос</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/ford_1.jpg" title="Моя жизнь, мои достижения"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><a id="a43" src="jpg/ne_sxodite_s_yma.jpg" title="Не сходите с ума на работе (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/franklin.jpg" title="Время – деньги. Автобиография"></th>
@@ -2171,37 +2174,37 @@
 <th><img src="jpg/freid_1.jpg" title="Очерки по психологии сексуальности"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/krossfit.jpg" title="Как кроссфит сделал меня самым физически подготовленным человеком Земли"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><a id="a51" src="jpg/novi_mir.jpg" title="О дивный новый мир (аудиокнига)"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/4568">  Хаксли Олдос</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/175074">Харари Юваль</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/74720"> Харви Стив</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/235105">Хастингс Рид</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/4740">  Хилл Наполеон</a></h4></th>
-</tr><tr>  
+</tr><tr>
+<th><a id="a51" src="jpg/novi_mir.jpg" title="О дивный новый мир (аудиокнига)"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><a id="a46" src="jpg/sapiens.jpg" title="Sapiens. Краткая история человечества (аудиокнига)"></th>
 <th><a id="a150" src="jpg/homodeus.jpg" title="Homo Deus. Краткая история будущего (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/stiv_harvi.jpg" title="Поступай как женщина, думай как мужчина"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a62" src="jpg/netflix.jpg" title="Хастингс Рид, Мейер Эрин - Никаких правил. Уникальная культура Netflix (аудиокнига)"></a></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/hill_1.jpg" title="Думай и богатей"></th> 
-<th><a id="a20" src="jpg/hill_2.jpg" title="Закон успеха (аудиокнига)"></a></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="3"><h4><a href="https://flibusta.is/a/4740">  Хилл Наполеон</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/11">	   Хокинг Стивен</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/286751">Хорф Харальд и др.</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/58577"> Цацулин Павел</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/19614"> Цунэтомо Ямамото</a></h4></th>
+<th colspan="4"><h4><a href="https://flibusta.is/a/286751">Хорф Харальд и др.</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/58577"> Цацулин Павел</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/hill_1.jpg" title="Думай и богатей"></th> 
+<th><a id="a20" src="jpg/hill_2.jpg" title="Закон успеха (аудиокнига)"></a></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/hoking_1.jpg" title="Теория всего. От сингулярности до бесконечности, происхождение и судьба Вселенной"></th>
 <th><a id="a42" src="jpg/hoking_2.jpg" title="Краткая история времени. От Большого взрыва до черных дыр (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
@@ -2209,18 +2212,18 @@
 <th><a id="a173" src="jpg/atomic_heart_2.jpg" title="Atomic Heart. Далекое светлое будущее (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/bezoruzhnyy_voin.jpg" title="Безоружный воин"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/bysido_2.jpg" title="Хагакурэ"></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left">
+<th colspan="2"><h4><a href="https://flibusta.is/a/19614"> Цунэтомо Ямамото</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/6117">Чалдини Роберт</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/1884">Чан Джеки</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/1944">Чепмен Гэри</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/bysido_2.jpg" title="Хагакурэ"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/psihologia_vliania.jpg" title="Психология влияния (4-е издание)"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/chan.jpg" title="Я - Джеки Чан"></th>
