Прочитал На пенсию в 35 лет

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/na_pensiy_v_35_let.jpg" title="На пенсию в 35 лет"></th>	
 <th><img src="jpg/pro_fedota.jpg" title="Про Федота-стрельца, удалого молодца"></th>		
 <th><img src="jpg/pyaro_33.jpg" title="[Эркюль Пуаро #33] Причуда мертвеца"></th>
 <th><img src="jpg/4_krilo_3.jpg" title="Ониксовый шторм"></th>
@@ -647,11 +648,14 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="http://flibusta.is/a/30541"> Аткинсон Уильям</a></h4></th>
+<th colspan="2"><h4><a href="http://flibusta.is/a/239964">Бабайкин</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/25885"> Баллард Джеймс</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/139762">Барден Фил</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/208731">Батырев Максим</a></h4></th>
 </tr><tr>
 <th><img src="jpg/sila_misli.jpg" title="Закон привлечения и сила мысли"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/na_pensiy_v_35_let.jpg" title="На пенсию в 35 лет"></th>	
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/visotka.jpg" title="Высотка"></th> 
 <th><img src="jpg/0.jpg"></th>
