Прочитал Библия секса

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/biblia_seksa.jpg" title="Библия секса"></th>	
 <th><a id="a214" src="jpg/sistema_1.jpg" title="Система. Книга 1 (аудиокнига)"></a></th>
 <th><img src="jpg/na_pensiy_v_35_let.jpg" title="На пенсию в 35 лет"></th>	
 <th><img src="jpg/pro_fedota.jpg" title="Про Федота-стрельца, удалого молодца"></th>		
@@ -1136,9 +1137,12 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/32484"> Джоанидис Пол</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/201933">Джонсон Сью</a></h4></th>
 <th colspan="1"><h4><a href="https://flibusta.is/a/18756"> Дик Филип</a></h4></th>
 </tr><tr> 
+<th><img src="jpg/biblia_seksa.jpg" title="Библия секса"></th>	
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/obnimi_menia.jpg" title="Обними меня крепче. 7 диалогов для любви на всю жизнь"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/mechtayt_li.jpg" title="Мечтают ли андроиды об электроовцах?"></th>
